# DoublePendulum

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DoublePendulum.cpp  DoublePendulum.hpp  DrawingFunctions.cpp  DrawingFunctions.hpp  LICENSE  Node.cpp  Node.hpp  README.md  Simulation.cpp  Simulation.hpp  main.cpp
cmake/toolchains/: native.cmake
shaders/: compute.comp  vertex.vert
src/: config.h  main.c
src/app/: app.c  app.h  fps.c  fps.h  input.c  input.h  render_data.c  render_data.h  threadpool.c  threadpool.h  window.c  window.h
src/config/: app_config.h  config.h  config_validation.h  render_config.h  simulation_config.h
src/renderer/: render_frame.c  render_frame.h  renderer.h
src/renderer/sdl/: color.c  color.h  color_utils.h  line_batch.c  line_batch.h  renderer.c  renderer_backend.h  renderer_sdl.c  renderer_sdl.h  trail.c  trail.h
src/renderer/vk/: vertex.c  vertex.h  vk_renderer.c  vk_renderer.h  vk_utils.c  vk_utils.h
src/simulation/: integrator.h  pendulum.c  pendulum.h  pendulum_equations.c  pendulum_equations.h  rk4.c  rk4.h  rod.c  rod.h  simulation.c  simulation.h  simulation_snapshot.h  threadpool.c  threadpool.h
src/simulation/integrators/: rk4.c
src/utils/: threadpool.c  threadpool.h
